# ifc

./: .gitignore  README.md  main.py  pyproject.toml
src/ifc/: config.py
